[gd_scene load_steps=8 format=3 uid="uid://bynuh4yjotk04"]

[ext_resource type="Texture2D" uid="uid://ddue2rijfy6jn" path="res://assets/images/ui/marker.png" id="1_isk6a"]
[ext_resource type="Script" path="res://technical/events/hitmarker.gd" id="1_ojnhw"]
[ext_resource type="AudioStream" uid="uid://dx8qga732donx" path="res://assets/sounds/gunshot.ogg" id="3_tok2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f86p2"]
size = Vector2(154, 160)

[sub_resource type="Animation" id="Animation_aolhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_tgh4k"]
resource_name = "gunshot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2x33"]
_data = {
"RESET": SubResource("Animation_aolhj"),
"gunshot": SubResource("Animation_tgh4k")
}

[node name="Hitmarker" type="Node2D"]
script = ExtResource("1_ojnhw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(27, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_f86p2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(26.75, 24)
scale = Vector2(0.315029, 0.303797)
texture = ExtResource("1_isk6a")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.6
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tok2r")
volume_db = -13.117

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 105
offset_left = -12.0
offset_top = -12.0
offset_right = 1168.0
offset_bottom = 666.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m2x33")
}

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
